--- a/themes/phoenix/templates/record/hold.phtml
+++ b/themes/phoenix/templates/record/hold.phtml
@@ -1,4 +1,4 @@
-<?
+<?php
     // Set page title.
     $this->headTitle($this->translate('request_place_text') . ': ' . $this->driver->getBreadcrumb());
 
@@ -10,18 +10,18 @@
     $isHold = $this->gatheredDetails['holdtype'] == 'hold';
 ?>
 <h2>
-  <? if ($isHold):?>
+  <?php if ($isHold):?>
     <?=$this->transEsc('hold_place_text')?>
-  <? else: ?>
+  <?php else: ?>
     <?=$this->transEsc('request_place_text')?>
-  <? endif; ?>
+  <?php endif; ?>
 </h2>
-<? if ($this->helpText): ?>
+<?php if ($this->helpText): ?>
 <p class="helptext"><?=$this->helpText?></p>
-<? endif; ?>
+<?php endif; ?>
 
 <div class="hold-form">
-  <? if ($isHold):?>
+  <?php if ($isHold):?>
     <ul>
       <li>Placing a hold request on an item will cause the item to be held for pickup for you as soon as it is available.</li>
       <li><strong>Regenstein Closed Stack</strong> items will typically be available within <strong>1 business day</strong>.</li>
@@ -31,14 +31,14 @@
       <li>Multiple requests for the same item are fulfilled in the order in which they are received.</li>
       <li>You will receive an email notice when the item is available for pickup.</li>
     </ul>
-  <? else: ?>
+  <?php else: ?>
     <ul>
       <li>Recalling a <strong>loaned</strong> item from another user will cause the item to be due <strong>7 days after the date it is recalled</strong>.</li>
       <li>Recalling an item that is <strong>on hold</strong> or <strong>in transit for hold</strong> will cause the item to be due <strong>7 days after the date the prior user borrows the item</strong>.</li>
       <li>Multiple requests for the same item are fulfilled in the order in which they are received.</li>
       <li>You will receive an email notice when the item is available for pickup.</li>
     </ul>
-  <? endif; ?>
+  <?php endif; ?>
     <div class="alert alert-info">
     <p>Requests can take sixty seconds to process. Please be patient when
     submitting this form.</p>
@@ -49,16 +49,16 @@
     <div class="col-sm-9">
       <p class="form-control-static"><?=$this->driver->getBreadcrumb() ?></p>
     </div>
-    <? if (in_array("comments", $this->extraHoldFields)): ?>
+    <?php if (in_array("comments", $this->extraHoldFields)): ?>
       <div class="form-group hold-comment">
         <label class="col-sm-3 control-label"><?=$this->transEsc("Comments")?>:</label>
         <div class="col-sm-9">
           <textarea rows="3" cols="20" name="gatheredDetails[comment]" class="form-control"><?=isset($this->gatheredDetails['comment']) ? $this->escapeHtml($this->gatheredDetails['comment']) : ''?></textarea>
         </div>
       </div>
-    <? endif; ?>
+    <?php endif; ?>
 
-    <? if (in_array("requiredByDate", $this->extraHoldFields)): ?>
+    <?php if (in_array("requiredByDate", $this->extraHoldFields)): ?>
       <div class="form-group hold-required-by">
         <label class="col-sm-3 control-label"><?=$this->transEsc("hold_required_by")?>:</label>
         <div class="col-sm-9">
@@ -66,9 +66,9 @@
           (<?=$this->dateTime()->getDisplayDateFormat()?>)
         </div>
       </div>
-    <? endif; ?>
+    <?php endif; ?>
 
-    <? if ($this->requestGroupNeeded): ?>
+    <?php if ($this->requestGroupNeeded): ?>
       <div class="form-group hold-request-group">
         <?
           if (isset($this->gatheredDetails['requestGroupId']) && $this->gatheredDetails['requestGroupId'] !== "") {
@@ -80,23 +80,23 @@
         <label class="col-sm-3 control-label"><?=$this->transEsc("hold_request_group")?>:</label>
         <div class="col-sm-9">
           <select id="requestGroupId" name="gatheredDetails[requestGroupId]" class="form-control">
-          <? if ($selected === false): ?>
+          <?php if ($selected === false): ?>
             <option value="" selected="selected">
               <?=$this->transEsc('select_request_group')?>
             </option>
-          <? endif; ?>
-          <? foreach ($this->requestGroups as $group): ?>
+          <?php endif; ?>
+          <?php foreach ($this->requestGroups as $group): ?>
             <option value="<?=$this->escapeHtmlAttr($group['id'])?>"<?=($selected == $group['id']) ? ' selected="selected"' : ''?>>
               <?=$this->transEsc('request_group_' . $group['name'], null, $group['name'])?>
             </option>
-          <? endforeach; ?>
+          <?php endforeach; ?>
           </select>
         </div>
       </div>
-    <? endif; ?>
+    <?php endif; ?>
 
-    <? if (in_array("pickUpLocation", $this->extraHoldFields)): ?>
-      <?
+    <?php if (in_array("pickUpLocation", $this->extraHoldFields)): ?>
+      <?php
         if (isset($this->gatheredDetails['pickUpLocation']) && $this->gatheredDetails['pickUpLocation'] !== "") {
             $selected = $this->gatheredDetails['pickUpLocation'];
         } elseif (isset($this->homeLibrary) && $this->homeLibrary !== "") {
@@ -105,45 +105,45 @@
             $selected = $this->defaultPickup;
         }
       ?>
-      <? if ($this->requestGroupNeeded): ?>
+      <?php if ($this->requestGroupNeeded): ?>
         <div class="form-group hold-pickup-location">
           <label id="pickUpLocationLabel" class="col-sm-3 control-label"><i></i> <?=$this->transEsc("pick_up_location")?>:
-            <? if (in_array("requestGroup", $this->extraHoldFields)): ?>
+            <?php if (in_array("requestGroup", $this->extraHoldFields)): ?>
               <noscript> (<?=$this->transEsc("Please enable JavaScript.")?>)</noscript>
-            <? endif; ?>
+            <?php endif; ?>
           </label>
           <div class="col-sm-9">
             <select id="pickUpLocation" name="gatheredDetails[pickUpLocation]" data-default="<?=$this->escapeHtmlAttr($selected)?>" class="form-control">
-              <? if ($selected === false): ?>
+              <?php if ($selected === false): ?>
               <option value="" selected="selected">
                 <?=$this->transEsc('select_pickup_location')?>
               </option>
-              <? endif; ?>
+              <?php endif; ?>
             </select>
           </div>
         </div>
-      <? elseif ($this->pickup): ?>
+      <?php elseif ($this->pickup): ?>
         <div class="form-group hold-pickup-location">
           <label class="col-sm-3 control-label"><?=$this->transEsc("pick_up_location")?>:</label>
           <div class="col-sm-9">
             <select id="pickUpLocation" name="gatheredDetails[pickUpLocation]" class="form-control">
-            <? if ($selected === false && count($this->pickup) > 1): ?>
+            <?php if ($selected === false && count($this->pickup) > 1): ?>
               <option value="" selected="selected">
                 <?=$this->transEsc('select_pickup_location')?>
               </option>
-            <? endif; ?>
-            <? foreach ($this->pickup as $lib): ?>
+            <?php endif; ?>
+            <?php foreach ($this->pickup as $lib): ?>
               <option value="<?=$this->escapeHtmlAttr($lib['locationID'])?>"<?=($selected == $lib['locationID']) ? ' selected="selected"' : ''?>>
                 <?=$this->transEsc('location_' . $lib['locationDisplay'], null, $lib['locationDisplay'])?>
               </option>
-            <? endforeach; ?>
+            <?php endforeach; ?>
             </select>
           </div>
         </div>
-      <? else: ?>
+      <?php else: ?>
         <input type="hidden" name="gatheredDetails[pickUpLocation]" value="<?=$this->escapeHtmlAttr($this->defaultPickup)?>" />
-      <? endif; ?>
-    <? endif; ?>
+      <?php endif; ?>
+    <?php endif; ?>
     <div class="form-group">
       <div class="col-sm-9 col-sm-offset-3">
         <input class="btn btn-primary" type="submit" name="placeHold" value="<?=$this->transEsc('request_submit_text')?>"/>
