--- a/themes/phoenix/templates/Auth/AbstractBase/login.phtml
+++ b/themes/phoenix/templates/Auth/AbstractBase/login.phtml
@@ -2,27 +2,27 @@
     <button id="login-toggle" class="btn btn-link" href="#">No CNetID?</button>
 </div>
 <div class="login-toggle-content">
-<? $account = $this->auth()->getManager(); ?>
-<? $sessionInitiator = $account->getSessionInitiator($this->serverUrl($this->url('myresearch-home'))); ?>
-<? if (!$sessionInitiator): // display default login form if no login URL provided ?>
-  <form method="post" class="" action="<?=$this->url('myresearch-home')?>" name="loginForm" id="loginForm">
+<?php $account = $this->auth()->getManager(); ?>
+<?php $sessionInitiator = $account->getSessionInitiator($this->serverUrl($this->url('myresearch-home'))); ?>
+<?php if (!$sessionInitiator): // display default login form if no login URL provided ?>
+  <form method="post" action="<?=$this->url('myresearch-home')?>" name="loginForm" class="" id="loginForm">
     <?=$this->auth()->getLoginFields()?>
     <input type="hidden" name="auth_method" value="<?=$account->getAuthMethod()?>">
-    <input type="hidden" name="csrf" value="<?=$this->escapeHtmlAttr($account->getCsrfHash(true))?>" />
+    <input type="hidden" name="csrf" value="<?=$this->escapeHtmlAttr($account->getCsrfHash())?>" />
     <div class="form-group">
       <div class="col-sm-9">
-        <? //if ($account->supportsCreation()): ?>
+        <?php //if ($account->supportsCreation()): ?>
           <!--<a class="btn btn-link createAccountLink" href="<?=$this->url('myresearch-account') ?>?auth_method=<?//=$account->getAuthMethod()?>"><?//=$this->transEsc('Create New Account')?></a>-->
-        <? //endif; ?>
+        <?php //endif; ?>
         <input class="btn btn-primary" type="submit" name="processLogin" value="<?=$this->transEsc('Login ')?>">
-        <? if ($account->supportsRecovery()): ?>
+        <?php if ($account->supportsRecovery()): ?>
           <br/>
           <a class="btn btn-link" href="<?=$this->url('myresearch-recover') ?>?auth_method=<?=$account->getAuthMethod()?>"><?=$this->transEsc('Forgot Password')?></a>
-        <? endif; ?>
+        <?php endif; ?>
       </div>
     </div>
   </form>
 </div><!--/.login-toggle-content-->
-<? else: ?>
+<?php else: ?>
   <a href="<?=$this->escapeHtmlAttr($sessionInitiator)?>" class="btn btn-link" data-lightbox-ignore><?=$this->transEsc("Institutional Login")?></a>
-<? endif; ?>
+<?php endif; ?>
