--- a/themes/phoenix/templates/Citation/mla-article.phtml
+++ b/themes/phoenix/templates/Citation/mla-article.phtml
@@ -1,6 +1,6 @@
-<? if (!empty($this->authors)): ?><?=$this->escapeHtml($this->authors)?>. <? endif; ?>
-&quot;<?=$this->title?><? if ($this->periodAfterTitle): ?>.<? endif ?>&quot; 
+<?php if (!empty($this->authors)): ?><?=$this->escapeHtml($this->authors)?>. <?php endif; ?>
+&quot;<?=$this->title?><?php if ($this->periodAfterTitle): ?>.<?php endif ?>&quot; 
 <span style="font-style:italic;"><?=$this->escapeHtml($this->journal)?></span> 
-<? if (!empty($this->numberAndDate)): ?><?=$this->escapeHtml($this->numberAndDate)?><? if (!empty($this->pageRange)): ?>: <? endif; ?><? endif; ?>
-<? if (!empty($this->pageRange)): ?><?=$this->escapeHtml($this->pageRange)?><? endif; ?>.
-<? if (!empty($this->format)): ?> <?=$this->escapeHtml($this->format)?>.<? endif; ?>
+<?php if (!empty($this->numberAndDate)): ?><?=$this->escapeHtml($this->numberAndDate)?><?php if (!empty($this->pageRange)): ?>: <?php endif; ?><?php endif; ?>
+<?php if (!empty($this->pageRange)): ?><?=$this->escapeHtml($this->pageRange)?><?php endif; ?>.
+<?php if (!empty($this->format)): ?> <?=$this->escapeHtml($this->format)?>.<?php endif; ?>
