--- a/themes/phoenix/templates/Recommend/AuthorFacets.phtml
+++ b/themes/phoenix/templates/Recommend/AuthorFacets.phtml
@@ -1,22 +1,23 @@
-<? if ($this->recommend->getResults()->getResultTotal() > 0): ?>
-  <? $similarAuthors = $this->recommend->getSimilarAuthors(); ?>
-  <? if (!empty($similarAuthors['list'])): ?>
+<?php if ($this->recommend->getResults()->getResultTotal() > 0): ?>
+  <?php $similarAuthors = $this->recommend->getSimilarAuthors(); ?>
+  <?php if (!empty($similarAuthors['list'])): ?>
     <div class="row">
       <div class="col-sm-4">
-      <p><?=$this->transEsc('Author Results for')?> <strong><?=$this->escapeHtml($this->recommend->getSearchTerm()) ?></strong></p>
-      <? foreach($similarAuthors['list'] as $i => $author): ?>
-        <? if ($i == 5): ?>
+    <p class="author-label"><?=$this->transEsc('Author Results for')?> <strong><?=$this->escapeHtml($this->recommend->getSearchTerm()) ?></strong></p>
+
+      <?php foreach($similarAuthors['list'] as $i => $author): ?>
+        <?php if ($i == 5): ?>
         <a href="<?=$this->url('author-search') . '?lookfor=' . urlencode($this->recommend->getSearchTerm()) ?>"><strong><?=$this->transEsc("see all") ?> <?=(isset($similarAuthors['count']) && $similarAuthors['count']) ? $similarAuthors['count'] : ''?> &raquo;</strong></a>
       </div>
       <div class="col-sm-4">
-        <? endif; ?>
-        <a href="<?=$this->url('author-home') . '?author=' . urlencode($author['value'])?>"><?=$author['value'] ?><? /* count disabled -- uncomment to add: echo ' - ' . $author['count']; */ ?></a>
-        <? if ($i+1 < count($similarAuthors['list'])): ?>
+        <?php endif; ?>
+        <a href="<?=$this->url('author-home') . '?author=' . urlencode($author['value'])?>"><?=$author['value'] ?><?php /* count disabled -- uncomment to add: echo ' - ' . $author['count']; */ ?></a>
+        <?php if ($i + 1 < count($similarAuthors['list'])): ?>
           <br/>
-        <? endif; ?>
-      <? endforeach; ?>
+        <?php endif; ?>
+      <?php endforeach; ?>
       </div>
     </div>
     <br/>
-  <? endif; ?>
-<? endif; ?>
+  <?php endif; ?>
+<?php endif; ?>
