--- a/themes/phoenix/templates/RecordDriver/DefaultRecord/core.phtml
+++ b/themes/phoenix/templates/RecordDriver/DefaultRecord/core.phtml
@@ -1,4 +1,4 @@
-<?   /* This file will be very different from it's bootstrap counterpart
+<?php   /* This file will be very different from it's bootstrap counterpart
         because it is driven by our custom SolrMarcPhoenix record driver
         Only diff stuff after <div class="last"> - brad*/
 
@@ -7,17 +7,17 @@
 ?>
 
 <div class="row" vocab="http://schema.org/" resource="#record" typeof="<?=$this->driver->getSchemaOrgFormats()?> Product">
-  <? $QRCode = $this->record($this->driver)->getQRCode("core");
+  <?php $QRCode = $this->record($this->driver)->getQRCode("core");
      $cover = $this->record($this->driver)->getCover('core', 'medium', $this->record($this->driver)->getThumbnail('large'));
      $preview = $this->record($this->driver)->getPreviews(); ?>
   <div class="col-sm-9 info-col">
 
-    <? if ($this->userlist()->getMode() !== 'disabled'): ?>
-      <? /* Display the lists that this record is saved to */ ?>
+    <?php if ($this->userlist()->getMode() !== 'disabled'): ?>
+      <?php /* Display the lists that this record is saved to */ ?>
       <div class="savedLists hidden alert alert-info">
         <strong><?=$this->transEsc("Saved in")?>:</strong>
       </div>
-    <? endif; ?>
+    <?php endif; ?>
 
     <?/* Display Main Details */?>
     <?
@@ -35,38 +35,40 @@
     ?>
     <table class="table table-striped">
       <caption><?=$this->transEsc('Bibliographic Details')?></caption>
-      <? $this->MarcFields()->returnMarcData('top', $siteUrl); ?>
-        <? foreach ($coreFields as $key => $value): ?>
-          <tr><th><?=$this->transEsc($key)?>:</th><td><?=$value?></td></tr>
-        <? endforeach; ?>
+      <?php $this->MarcFields()->returnMarcData('top', $siteUrl); ?>
+        <?php foreach ($coreFields as $key => $value): ?>
+          <?php if (is_string($value)): ?>
+              <tr><th><?=$this->transEsc($key)?>:</th><td><?=$value?></td></tr>
+          <?php endif; ?>
+        <?php endforeach; ?>
     </table>
     <?/* End Main Details */?>
 
     <?/* Display Additional Details */?>
     <table id="top-hidden" class="table table-striped">
-      <? $this->MarcFields()->returnMarcData('top-hidden'); ?>
+      <?php $this->MarcFields()->returnMarcData('top-hidden'); ?>
     </table>
     <?/* End Additional Details */?>
   </div><!--/.col-sm-9-->
 
   <div class="col-sm-3">
     <div class="text-center">
-      <? /* Display thumbnail if appropriate: */ ?>
-      <? if($cover): ?>
+      <?php /* Display thumbnail if appropriate: */ ?>
+      <?php if($cover): ?>
         <?=$cover?>
-      <? else: ?>
+      <?php else: ?>
         <img src="<?=$this->url('cover-unavailable')?>" class="recordcover" alt="<?=$this->transEsc('No Cover Image')?>"/>
-      <? endif; ?>
+      <?php endif; ?>
 
-      <? /* Display qrcode if appropriate: */ ?>
-      <? if($QRCode): ?>
+      <?php /* Display qrcode if appropriate: */ ?>
+      <?php if($QRCode): ?>
         <span class="hidden-xs">
           <br/><img alt="<?=$this->transEsc('QR Code')?>" class="qrcode" src="<?=$this->escapeHtmlAttr($QRCode);?>"/>
         </span>
-      <? endif; ?>
+      <?php endif; ?>
     </div>
 
-    <? // if you have a preview tab but want to move or remove the preview link
+    <?php // if you have a preview tab but want to move or remove the preview link
        // from this area of the record view, this can be split into
        // getPreviewData() (should stay here) and
        // getPreviewLink() (can go in your desired tab) ?>
