--- a/themes/phoenix/templates/RecordDriver/DefaultRecord/result-list.phtml
+++ b/themes/phoenix/templates/RecordDriver/DefaultRecord/result-list.phtml
@@ -1,4 +1,4 @@
-<?
+<?php
   $coverDetails = $this->record($this->driver)->getCoverDetails('result-list', 'medium', $this->recordLink()->getUrl($this->driver));
   $cover = $coverDetails['html'];
   $thumbnail = false;
@@ -10,39 +10,39 @@
     <div class="media-<?=$thumbnailAlignment ?> <?=$this->escapeHtmlAttr($coverDetails['size'])?> col-sm-2 col-xs-0 left hidden-xs">
       <?=$cover ?>
     </div>
-    <? $thumbnail = ob_get_contents(); ?>
-  <? ob_end_clean(); ?>
-<? endif; ?>
+    <?php $thumbnail = ob_get_contents(); ?>
+  <?php ob_end_clean(); ?>
+<?php endif; ?>
 <input type="hidden" value="<?=$this->escapeHtmlAttr($this->driver->getUniqueID())?>" class="hiddenId" />
 <input type="hidden" value="<?=$this->escapeHtmlAttr($this->driver->getSourceIdentifier())?>" class="hiddenSource" />
 <div class="media">
-  <? if ($thumbnail && $thumbnailAlignment == 'left'): ?>
+  <?php if ($thumbnail && $thumbnailAlignment == 'left'): ?>
     <?=$thumbnail ?>
-  <? endif ?>
+  <?php endif ?>
   <div class="media-body">
     <div class="row short-view">
       <div class="col-sm-8 middle">
-        <? // If it's a MARC record use the custom MarcFields view helper?>
-        <? if ($isMarc):?>
+        <?php // If it's a MARC record use the custom MarcFields view helper?>
+        <?php if ($isMarc):?>
           <div class="custom-marc-record">
-              <? /* Set the bib id and record link for each result*/ 
+              <?php /* Set the bib id and record link for each result*/ 
                  $this->MarcFields()->setId($this->escapeHtmlAttr($this->driver->getUniqueID()));
                  $this->MarcFields()->setRecordLink($this->recordLink()->getUrl($this->driver)); 
                  /*Get MARC field templates populated with the proper data*/
                  $this->MarcFields()->returnMarcData('results'); ?>
   
               <?/* Add snippets to the custom MARC view*/?>
-              <? if ($snippet = $this->driver->getHighlightedSnippet()): ?>
-                <? if (!empty($snippet['caption'])): ?>
+              <?php if ($snippet = $this->driver->getHighlightedSnippet()): ?>
+                <?php if (!empty($snippet['caption'])): ?>
                   <strong><?=$this->transEsc($snippet['caption']) ?>:</strong> ';
-                <? endif; ?>
-                <? if (!empty($snippet['snippet'])): ?>
+                <?php endif; ?>
+                <?php if (!empty($snippet['snippet'])): ?>
                   <span class="quotestart">&#8220;</span>...<?=$this->highlight($snippet['snippet']) ?>...<span class="quoteend">&#8221;</span><br/>
-                <? endif; ?>
-              <? endif; ?>
+                <?php endif; ?>
+              <?php endif; ?>
           </div><!--/.custom-marc-record-->
-        <? // If it's not a MARC record do normal VuFind stuff?>
-        <? else: ?>
+        <?php // If it's not a MARC record do normal VuFind stuff?>
+        <?php else: ?>
         <div>
           <a href="<?=$this->recordLink()->getUrl($this->driver)?>" class="title getFull" data-view="<?=$this->params->getOptions()->getListViewOption() ?>">
             <?=$this->record($this->driver)->getTitleHtml()?>
@@ -50,81 +50,81 @@
         </div>
 
         <div>
-          <? if($this->driver->isCollection()): ?>
-            <?=implode('<br>', array_map(array($this, 'escapeHtml'), $this->driver->getSummary())); ?>
-          <? else: ?>
-            <? $summAuthors = $this->driver->getPrimaryAuthorsWithHighlighting(); if (!empty($summAuthors)): ?>
+          <?php if($this->driver->isCollection()): ?>
+            <?=implode('<br>', array_map([$this, 'escapeHtml'], $this->driver->getSummary())); ?>
+          <?php else: ?>
+            <?php $summAuthors = $this->driver->getPrimaryAuthorsWithHighlighting(); if (!empty($summAuthors)): ?>
               <?=$this->transEsc('by')?>
-              <? $authorCount = count($summAuthors); foreach ($summAuthors as $i => $summAuthor): ?>
+              <?php $authorCount = count($summAuthors); foreach ($summAuthors as $i => $summAuthor): ?>
                 <a class="author" href="<?=$this->record($this->driver)->getLink('author', $this->highlight($summAuthor, null, true, false))?>"><?=$this->highlight($summAuthor)?></a><?=$i + 1 < $authorCount ? ',' : ''?>
-              <? endforeach; ?>
-            <? endif; ?>
+              <?php endforeach; ?>
+            <?php endif; ?>
 
-            <? $journalTitle = $this->driver->getContainerTitle(); $summDate = $this->driver->getPublicationDates(); ?>
-            <? if (!empty($journalTitle)): ?>
+            <?php $journalTitle = $this->driver->getContainerTitle(); $summDate = $this->driver->getPublicationDates(); ?>
+            <?php if (!empty($journalTitle)): ?>
               <?=!empty($summAuthor) ? '<br />' : ''?>
               <?=$this->transEsc('Published in')?>
-              <? $containerSource = $this->driver->getSourceIdentifier(); ?>
-              <? $containerID = $this->driver->getContainerRecordID(); ?>
-              <? /* TODO: handle highlighting more elegantly here: */?>
-              <a href="<?=($containerID ? $this->recordLink()->getUrl("$containerSource|$containerID") : $this->record($this->driver)->getLink('journaltitle', str_replace(array('{{{{START_HILITE}}}}', '{{{{END_HILITE}}}}'), '', $journalTitle)))?>"><?=$this->highlight($journalTitle) ?></a>
+              <?php $containerSource = $this->driver->getSourceIdentifier(); ?>
+              <?php $containerID = $this->driver->getContainerRecordID(); ?>
+              <?php /* TODO: handle highlighting more elegantly here: */?>
+              <a href="<?=($containerID ? $this->recordLink()->getUrl("$containerSource|$containerID") : $this->record($this->driver)->getLink('journaltitle', str_replace(['{{{{START_HILITE}}}}', '{{{{END_HILITE}}}}'], '', $journalTitle)))?>"><?=$this->highlight($journalTitle) ?></a>
               <?=!empty($summDate) ? ' (' . $this->escapeHtml($summDate[0]) . ')' : ''?>
-            <? elseif (!empty($summDate)): ?>
+            <?php elseif (!empty($summDate)): ?>
               <?=!empty($summAuthor) ? '<br />' : ''?>
               <?=$this->transEsc('Published') . ' ' . $this->escapeHtml($summDate[0])?>
-            <? endif; ?>
-            <? $summInCollection = $this->driver->getContainingCollections(); if (!empty($summInCollection)): ?>
-              <? foreach ($summInCollection as $collId => $collText): ?>
+            <?php endif; ?>
+            <?php $summInCollection = $this->driver->getContainingCollections(); if (!empty($summInCollection)): ?>
+              <?php foreach ($summInCollection as $collId => $collText): ?>
                 <div>
                   <b><?=$this->transEsc("in_collection_label")?></b>
-                  <a class="collectionLinkText" href="<?=$this->url('collection', array('id' => $collId))?>?recordID=<?=urlencode($this->driver->getUniqueID())?>">
+                  <a class="collectionLinkText" href="<?=$this->url('collection', ['id' => $collId])?>?recordID=<?=urlencode($this->driver->getUniqueID())?>">
                     <?=$this->escapeHtml($collText)?>
                   </a>
                 </div>
-              <? endforeach; ?>
-            <? endif; ?>
-          <? endif; ?>
+              <?php endforeach; ?>
+            <?php endif; ?>
+          <?php endif; ?>
         </div>
 
-        <? if(!$this->driver->isCollection()): ?>
-          <? if ($snippet = $this->driver->getHighlightedSnippet()): ?>
-            <? if (!empty($snippet['caption'])): ?>
+        <?php if(!$this->driver->isCollection()): ?>
+          <?php if ($snippet = $this->driver->getHighlightedSnippet()): ?>
+            <?php if (!empty($snippet['caption'])): ?>
               <strong><?=$this->transEsc($snippet['caption']) ?>:</strong> ';
-            <? endif; ?>
-            <? if (!empty($snippet['snippet'])): ?>
+            <?php endif; ?>
+            <?php if (!empty($snippet['snippet'])): ?>
               <span class="quotestart">&#8220;</span>...<?=$this->highlight($snippet['snippet']) ?>...<span class="quoteend">&#8221;</span><br/>
-            <? endif; ?>
-          <? endif; ?>
-        <? endif; ?>
+            <?php endif; ?>
+          <?php endif; ?>
+        <?php endif; ?>
 
-        <?
+        <?php
         /* Display information on duplicate records if available */
         if ($dedupData = $this->driver->getDedupData()): ?>
           <div class="dedupInformation">
-          <?
+          <?php
             $i = 0;
             foreach ($dedupData as $source => $current) {
               if (++$i == 1) {
-                ?><span class="currentSource"><a href="<?=$this->recordLink()->getUrl($this->driver)?>"><?=$this->transEsc("source_$source", array(), $source)?></a></span><?
+                ?><span class="currentSource"><a href="<?=$this->recordLink()->getUrl($this->driver)?>"><?=$this->transEsc("source_$source", [], $source)?></a></span><?php
               } else {
                 if ($i == 2) {
-                  ?> <span class="otherSources">(<?=$this->transEsc('Other Sources')?>: <?
+                  ?> <span class="otherSources">(<?=$this->transEsc('Other Sources')?>: <?php
                 } else {
-                  ?>, <?
+                  ?>, <?php
                 }
-                ?><a href="<?=$this->recordLink()->getUrl($current['id'])?>"><?=$this->transEsc("source_$source", array(), $source)?></a><?
+                ?><a href="<?=$this->recordLink()->getUrl($current['id'])?>"><?=$this->transEsc("source_$source", [], $source)?></a><?php
               }
             }
             if ($i > 1) {
-              ?>)</span><?
+              ?>)</span><?php
             }?>
           </div>
-        <? endif; ?>
-        <? endif; ?>
-        <? // End if/else statement for custom MARC vs. normal VuFind?>
+        <?php endif; ?>
+        <?php endif; ?>
+        <?php // End if/else statement for custom MARC vs. normal VuFind?>
 
         <div class="callnumAndLocation ajax-availability hidden">
-          <? if ($this->driver->supportsAjaxStatus()): ?>
+          <?php if ($this->driver->supportsAjaxStatus()): ?>
             <span class="location holdings-info ajax-availability hidden">
               <?=$this->transEsc('Loading')?>...<br/>
             </span>
@@ -133,13 +133,13 @@
                 <?=$this->transEsc('Loading')?>...
               </span>
             </strong>
-          <? else: ?>
-            <? $summCallNo = $this->driver->getCallNumber(); if (!empty($summCallNo)): ?>
+          <?php else: ?>
+            <?php $summCallNo = $this->driver->getCallNumber(); if (!empty($summCallNo)): ?>
               <span class="callnumber holdings-info"><strong><?=$this->transEsc('Call Number')?>:</strong> <?=$this->escapeHtml($summCallNo)?><strong><?=$this->transEsc('Call Number')?>:</strong> <?=$this->escapeHtml($summCallNo)?></span>
-            <? endif; ?>
-          <? endif; ?>
+            <?php endif; ?>
+          <?php endif; ?>
   
-        <? /* We need to find out if we're supposed to display an OpenURL link ($openUrlActive),
+        <?php /* We need to find out if we're supposed to display an OpenURL link ($openUrlActive),
               but even if we don't plan to display the link, we still want to get the $openUrl
               value for use in generating a COinS (Z3988) tag -- see bottom of file.
             */
@@ -147,45 +147,45 @@
           $openUrlActive = $openUrl->isActive();
           // Account for replace_other_urls setting
           $urls = $this->Eholdings()->getEholdingLinks();//Replace default 856 urls with e-holdings from the 928 fields (previously 098s) ?>
-          <? if (!$openUrlActive && empty($urls) && $this->driver->supportsAjaxStatus()): ?>
+          <?php if (!$openUrlActive && empty($urls) && $this->driver->supportsAjaxStatus()): ?>
             <span class="status ajax-availability hidden holdings-info">
               <span><?=$this->transEsc('Loading')?>...</span>
             </span>
-          <? endif; ?>
+          <?php endif; ?>
         </div><!--/.callnumAndLocation -->
 
-          <? if ($openUrlActive || !empty($urls)): ?>
-          <? if ($openUrlActive): ?>
+          <?php if ($openUrlActive || !empty($urls)): ?>
+          <?php if ($openUrlActive): ?>
             <?=$openUrl->renderTemplate()?>
-          <? endif; ?>
-          <? if (!is_array($urls)) $urls = array();
+          <?php endif; ?>
+          <?php if (!is_array($urls)) $urls = [];
             if(!$this->driver->isCollection()):
               foreach ($urls as $current): ?>
-              <? $linkText = (!empty($current['text']) ? ': '.$current['text'] : ''); ?>
+              <?php $linkText = (!empty($current['text']) ? ': '.$current['text'] : ''); ?>
               <div class="e-holdings local-eholding">
                 <a href="<?=$this->escapeHtmlAttr($this->proxyUrl($current['url']))?>" class="fulltext eLink" target="new">
                     <?=$this->escapeHtml($this->Eholdings()->getEholdingsLinkText($current['type']) . $linkText)?>
                 </a> <?=$current['desc']?>
               </div>
-            <? endforeach; ?>
-          <? endif; ?>
-        <? endif; ?>
+            <?php endforeach; ?>
+          <?php endif; ?>
+        <?php endif; ?>
 
         <?/*Build a Hathi link for records with a 903 field = to "Hathi" or records with a bib# beginning with ocm or ocn.*/?>
-        <? if ($hathiLink) : ?>
+        <?php if ($hathiLink) : ?>
           <?=$hathiLink?>
-        <? endif; ?>
+        <?php endif; ?>
         <?=$this->record($this->driver)->getPreviews()?>
 
         <div class="deduped-eholdings" data-issns="<?=implode(',', $this->driver->getISSNs())?>"></div>
 
       </div>
       <div class="col-xs-0 right text-right hidden-print hidden-xs format-list">
-        <? /* Display qrcode if appropriate: */ ?>
-        <? if ($QRCode = $this->record($this->driver)->getQRCode("results")): ?>
-          <?
+        <?php /* Display qrcode if appropriate: */ ?>
+        <?php if ($QRCode = $this->record($this->driver)->getQRCode("results")): ?>
+          <?php
             // Add JS Variables for QrCode
-            $this->jsTranslations()->addStrings(array('qrcode_hide' => 'qrcode_hide', 'qrcode_show' => 'qrcode_show'));
+            $this->jsTranslations()->addStrings(['qrcode_hide' => 'qrcode_hide', 'qrcode_show' => 'qrcode_show']);
           ?>
           <span class="hidden-xs">
             <i class="fa fa-fw fa-qrcode" aria-hidden="true"></i> <a href="<?=$this->escapeHtmlAttr($QRCode);?>" class="qrcodeLink"><?=$this->transEsc('qrcode_show')?></a>
@@ -195,29 +195,32 @@
               </script>
             </div><br/>
           </span>
-        <? endif; ?>
+        <?php endif; ?>
 
-        <? if ($this->userlist()->getMode() !== 'disabled'): ?>
-          <? /* Add to favorites */ ?>
+      <?php if ($this->cart()->isActiveInSearch() && $this->params->getOptions()->supportsCart() && $this->cart()->isActive()): ?>
+        <?=$this->render('record/cart-buttons.phtml', ['id' => $this->driver->getUniqueId(), 'source' => $this->driver->getSourceIdentifier()]); ?><br/>
+      <?php endif; ?>
+
+        <?php if ($this->userlist()->getMode() !== 'disabled'): ?>
+          <?php /* Add to favorites */ ?>
+          <!--<i class="result-link-icon fa fa-fw fa-star" aria-hidden="true"></i>-->
           <a href="<?=$this->recordLink()->getActionUrl($this->driver, 'Save')?>" data-lightbox class="save-record" data-id="<?=$this->escapeHtmlAttr($this->driver->getUniqueId()) ?>"><?=$this->transEsc('Add to favorites')?></a><br/>
-          <? /* Saved lists */ ?>
-          <div class="savedLists alert alert-info hidden">
-            <strong><?=$this->transEsc("Saved in")?>:</strong>
-          </div>
-        <? endif; ?>
+        <?php elseif ($block = $this->permission()->getAlternateContent('feature.Favorites')): ?>
+          <?=$block?>
+        <?php endif; ?>
 
-        <? /* Hierarchy tree link */ ?>
-        <? $trees = $this->driver->tryMethod('getHierarchyTrees'); if (!empty($trees)): ?>
-          <? foreach ($trees as $hierarchyID => $hierarchyTitle): ?>
+        <?php /* Hierarchy tree link */ ?>
+        <?php $trees = $this->driver->tryMethod('getHierarchyTrees'); if (!empty($trees)): ?>
+          <?php foreach ($trees as $hierarchyID => $hierarchyTitle): ?>
             <div class="hierarchyTreeLink">
               <input type="hidden" value="<?=$this->escapeHtmlAttr($hierarchyID)?>" class="hiddenHierarchyId" />
               <i class="fa fa-fw fa-sitemap" aria-hidden="true"></i>
               <a class="hierarchyTreeLinkText" data-lightbox href="<?=$this->recordLink()->getTabUrl($this->driver, 'HierarchyTree')?>?hierarchy=<?=urlencode($hierarchyID)?>#tabnav" title="<?=$this->transEsc('hierarchy_tree')?>" data-lightbox-href="<?=$this->recordLink()->getTabUrl($this->driver, 'AjaxTab')?>?hierarchy=<?=urlencode($hierarchyID)?>" data-lightbox-post="tab=hierarchytree">
-                <?=$this->transEsc('hierarchy_view_context')?><? if (count($trees) > 1): ?>: <?=$this->escapeHtml($hierarchyTitle)?><? endif; ?>
+                <?=$this->transEsc('hierarchy_view_context')?><?php if (count($trees) > 1): ?>: <?=$this->escapeHtml($hierarchyTitle)?><?php endif; ?>
               </a>
             </div>
-          <? endforeach; ?>
-        <? endif; ?>
+          <?php endforeach; ?>
+        <?php endif; ?>
 
         <abbr class="unapi-id" title="<?php echo $this->driver->getUniqueId()?>"></abbr>
         <?=$this->record($this->driver)->getFormatList() ?>
@@ -225,7 +228,7 @@
       </div>
     </div>
   </div>
-  <? if ($thumbnail && $thumbnailAlignment == 'right'): ?>
+  <?php if ($thumbnail && $thumbnailAlignment == 'right'): ?>
     <?=$thumbnail ?>
-  <? endif ?>
+  <?php endif ?>
 </div>
