--- a/themes/phoenix/templates/RecordTab/description.phtml
+++ b/themes/phoenix/templates/RecordTab/description.phtml
@@ -1,4 +1,4 @@
-<?
+<?php
     // Set page title.
     $this->headTitle($this->translate('Description') . ': ' . $this->driver->getBreadcrumb());
 
@@ -6,11 +6,11 @@
     $mainFields = $formatter->getData($driver, $formatter->getDefaults('description'));
 ?>
 <table class="table table-striped" summary="<?=$this->transEsc('Description')?>">
-  <? if (!empty($mainFields)): ?>
-    <? foreach ($mainFields as $key => $current): ?>
-      <tr><th><?=$this->transEsc($key)?>:</th><td><?=$current['value']?></td></tr>
-    <? endforeach; ?>
-  <? else: ?>
+  <?php if (!empty($mainFields)): ?>
+    <?php foreach ($mainFields as $current): ?>
+      <tr><th><?=$this->transEsc($current['label'])?>:</th><td><?=$current['value']?></td></tr>
+    <?php endforeach; ?>
+  <?php else: ?>
     <tr><td><?=$this->transEsc('no_description')?></td></tr>
-  <? endif; ?>
+  <?php endif; ?>
 </table>
