--- a/themes/phoenix/templates/RecordTab/toc.phtml
+++ b/themes/phoenix/templates/RecordTab/toc.phtml
@@ -1,8 +1,7 @@
-<?
+<?php
     // Set page title.
     $this->headTitle($this->translate('Table of Contents') . ': ' . $this->driver->getBreadcrumb());
 
-    //$toc = $this->driver->getTOC();
     $toc = $this->tab->getContent();
     if (!empty($toc) && array_key_exists('Syndetics', $toc)) {
         $toc = $toc['Syndetics'];
@@ -10,13 +9,13 @@
         $toc = $this->driver->getTOC();
     }
 ?>
-<? if (!empty($toc)): ?>
+<?php if (!empty($toc)): ?>
   <strong><?=$this->transEsc('Table of Contents')?>: </strong>
   <ul class="toc">
-    <? foreach ($toc['Syndetics'][0]['Content'] as $line): ?>
+    <?php foreach ($toc['Syndetics'][0]['Content'] as $line): ?>
       <li><?=$this->escapeHtml($line)?></li>
-    <? endforeach; ?>
+    <?php endforeach; ?>
   </ul>
-<? else: ?>
+<?php else: ?>
   <?=$this->transEsc("Table of Contents unavailable")?>.
-<? endif; ?>
+<?php endif; ?>
