--- a/themes/phoenix/templates/cart/export.phtml
+++ b/themes/phoenix/templates/cart/export.phtml
@@ -1,37 +1,37 @@
-<?
+<?php
     // Set page title.
     $this->headTitle($this->translate('Export Favorites'));
 
     // Set up breadcrumbs:
     $this->layout()->breadcrumbs = '<li>' . $this->searchMemory()->getLastSearchLink($this->transEsc('Search'), '', '</li> ')
-    . '<li><a href="' .$this->url('cart-home'). '">' .$this->transEsc('Cart'). '</a></li> '
+    . '<li><a href="' . $this->url('cart-home') . '">' . $this->transEsc('Cart') . '</a></li> '
     . '<li class="active">' . $this->transEsc('Export Favorites') . '</li>';
 ?>
 <h2><?=$this->transEsc('Export Favorites')?></h2>
 
 <?=$this->flashmessages()?>
 
-<? if (!empty($this->exportOptions)): ?>
+<?php if (!empty($this->exportOptions)): ?>
   <form class="form-cart-export form-horizontal" method="post" action="<?=$this->url('cart-export')?>" name="exportForm" title="<?=$this->transEsc('Export Items')?>">
-    <? foreach ($this->records as $current): ?>
+    <?php foreach ($this->records as $current): ?>
       <input type="hidden" name="ids[]" value="<?=$this->escapeHtmlAttr($current->getSourceIdentifier() . '|' . $current->getUniqueId())?>" />
-    <? endforeach; ?>
+    <?php endforeach; ?>
     <div class="form-group">
     <label for="format" class="control-label"><?=$this->transEsc('Format')?>:</label>
       <select name="format" id="format" class="form-control">
-        <? $firstOption = null; ?>
-        <? foreach ($this->exportOptions as $exportOption): ?>
-          <? if ($firstOption == null) $firstOption = $exportOption; ?>
-          <option value="<?=$this->escapeHtmlAttr($exportOption)?>"<? if($this->export()->needsRedirect($exportOption)): ?> data-redirect<? endif; ?>><?=$this->transEsc($this->export()->getLabelForFormat($exportOption))?></option>
-        <? endforeach; ?>
+        <?php $firstOption = null; ?>
+        <?php foreach ($this->exportOptions as $exportOption): ?>
+          <?php if ($firstOption == null) $firstOption = $exportOption; ?>
+          <option value="<?=$this->escapeHtmlAttr($exportOption)?>"<?php if($this->export()->needsRedirect($exportOption)): ?> data-redirect<?php endif; ?>><?=$this->transEsc($this->export()->getLabelForFormat($exportOption))?></option>
+        <?php endforeach; ?>
       </select>
     </div>
     <div class="form-group">
-      <input class="export btn btn-primary" type="submit" name="submit" value="<?=$this->transEsc('Export')?>"<? if($this->export()->needsRedirect($firstOption)): ?> data-lightbox-ignore<? endif; ?>/>
+      <input class="export btn btn-primary" type="submit" name="submit" value="<?=$this->transEsc('Export')?>"<?php if($this->export()->needsRedirect($firstOption)): ?> data-lightbox-ignore<?php endif; ?>/>
     </div>
   </form>
-<? endif; ?>
-<?
+<?php endif; ?>
+<?php
   $script = <<<JS
   $('button.btn.hidden').removeClass('hidden');
   $('#itemhide').removeClass('in');
