--- a/themes/phoenix/templates/header.phtml
+++ b/themes/phoenix/templates/header.phtml
@@ -1,6 +1,6 @@
-<? $account = $this->auth()->getManager(); ?>
+<?php $account = $this->auth()->getManager(); ?>
 
-<? /* Add the referring URL to the session
+<?php /* Add the referring URL to the session
     * so we can always access the previous
     * page. Used to pass the referrer to
     * the knowledge tracker form */ 
@@ -21,84 +21,84 @@
   <a role="button" class="navbar-brand hidden-md hidden-sm hidden-xs" href="<?=$this->url('home')?>">The University of Chicago Library Catalog</a>
   <a role="button" class="navbar-brand hidden-lg" href="<?=$this->url('home')?>">Library <span class="tagline">Catalog</span></a>
 </div>
-<? if ($this->layout()->searchbox !== false): ?>
+<?php if ($this->layout()->searchbox !== false): ?>
   <section class="visible-lg">
     <?/*Smart search box (default VuFind)*/?> 
     <?=$this->layout()->searchbox ?>
     <?/*Dumb browse box*/?>
-    <? $this->alphaBrowseTypes = $this->GetConfig()->getAlphabrowseSearchTypes(); ?>
-    <?=$this->layout()->searchbox = $this->context($this)->renderInContext('alphabrowse/alphabrowseMini.phtml', array('searchClassId' => 'Solr')); ?>
+    <?php $this->alphaBrowseTypes = $this->GetConfig()->getAlphabrowseSearchTypes(); ?>
+    <?=$this->layout()->searchbox = $this->context($this)->renderInContext('alphabrowse/alphabrowseMini.phtml', ['searchClassId' => 'Solr']); ?>
   </section>
-<? endif; ?>
-<? if (!isset($this->layout()->renderingError)): ?>
+<?php endif; ?>
+<?php if (!isset($this->layout()->renderingError)): ?>
   <div class="collapse navbar-collapse" id="header-collapse">
     <nav>
       <ul class="nav navbar-nav navbar-left" role="menu">
-        <? // This is throwing a warning on production. We might need to bring this back in a different way.  
+        <?php // This is throwing a warning on production. We might need to bring this back in a different way.  
            //$currentUrl = $_SERVER['SCRIPT_URI'] . '?' . $_SERVER['QUERY_STRING'];?>
-        <? //if ($this->knowledgeTracker()->tabEnabled()): ?>
-          <!--<li><a id="knowledgeTrackerLink" class="modal-link" href="<?//=$this->url('feedback-knowledgetracker') ?>"><i class="fa fa-envelope"></i> <?//=$this->transEsc("Feedback")?></a></li>-->
-        <? //endif; ?>
+        <?php if ($this->KnowledgeTracker()->tabEnabled()): ?>
+          <li><a id="knowledgeTrackerLink" class="modal-link" href="<?=$this->url('feedback-knowledgetracker') ?>"><i class="fa fa-envelope"></i> <?=$this->transEsc("Feedback")?></a></li>
+        <?php endif; ?>
       </ul>
       <ul role="menu" class="nav navbar-nav navbar-right">
-        <? if ($this->feedback()->tabEnabled()): ?>
+        <?php if ($this->feedback()->tabEnabled()): ?>
           <li>
             <a id="feedbackLink" data-lightbox href="<?=$this->url('feedback-home') ?>"><i class="fa fa-envelope" aria-hidden="true"></i> <?=$this->transEsc("Feedback")?></a>
           </li>
-        <? endif; ?>
-        <? $cart = $this->cart(); if ($cart->isActive()): ?>
+        <?php endif; ?>
+        <?php $cart = $this->cart(); if ($cart->isActive()): ?>
           <!--<li id="cartSummary">
             <a id="cartItems" data-lightbox title="<?=$this->transEsc('View Book Bag')?>" href="<?=$this->url('cart-home')?>">
               <i class="fa fa-suitcase" aria-hidden="true"></i> <strong><?=count($cart->getItems())?></strong> <?=$this->transEsc('items')?>
               <span class="full<?=!$cart->isFull() ? ' hidden' : '' ?>">(<?=$this->transEsc('bookbag_full') ?>)</span>
             </a>
           </li>-->
-        <? endif; ?>
-        <? if (is_object($account) && $account->loginEnabled()): // hide login/logout if unavailable ?>
-          <li class="logoutOptions<? if(!$account->isLoggedIn()): ?> hidden<? endif ?>">
-            <a href="<?=$this->url('myresearch-home', array(), array('query' => array('redirect' => 0)))?>"><i class="fa fa-home" aria-hidden="true"></i> <?=$this->transEsc("Your Account")?></a>
+        <?php endif; ?>
+        <?php if (is_object($account) && $account->loginEnabled()): // hide login/logout if unavailable ?>
+          <li class="logoutOptions<?php if(!$account->isLoggedIn()): ?> hidden<?php endif ?>">
+            <a href="<?=$this->url('myresearch-home', [], ['query' => ['redirect' => 0]])?>"><i class="fa fa-home" aria-hidden="true"></i> <?=$this->transEsc("Your Account")?></a>
           </li>
-          <li class="logoutOptions<? if(!$account->isLoggedIn()): ?> hidden<? endif ?>">
+          <li class="logoutOptions<?php if(!$account->isLoggedIn()): ?> hidden<?php endif ?>">
             <a href="<?=$this->url('myresearch-logout')?>" class="logout"><i class="fa fa-sign-out" aria-hidden="true"></i> <?=$this->transEsc("Log Out")?></a>
           </li>
-          <li id="loginOptions"<? if($account->isLoggedIn()): ?> class="hidden"<? endif ?>>
-            <? if ($account->getSessionInitiator($this->serverUrl($this->url('myresearch-home')))): ?>
+          <li id="loginOptions"<?php if($account->isLoggedIn()): ?> class="hidden"<?php endif ?>>
+            <?php if ($account->getSessionInitiator($this->serverUrl($this->url('myresearch-home')))): ?>
               <a href="<?=$this->url('myresearch-userlogin')?>" data-lightbox><i class="fa fa-sign-in" aria-hidden="true"></i> <?=$this->transEsc("Institutional Login")?></a>
-            <? else: ?>
+            <?php else: ?>
               <a href="<?=$this->url('myresearch-userlogin')?>" data-lightbox><i class="fa fa-sign-in" aria-hidden="true"></i> <?=$this->transEsc("Login")?></a>
-            <? endif; ?>
+            <?php endif; ?>
           </li>
-        <? endif; ?>
+        <?php endif; ?>
 
-        <? if (isset($this->layout()->themeOptions) && count($this->layout()->themeOptions) > 1): ?>
+        <?php if (isset($this->layout()->themeOptions) && count($this->layout()->themeOptions) > 1): ?>
           <li class="theme dropdown">
             <form method="post" name="themeForm" id="themeForm">
               <input type="hidden" name="ui"/>
             </form>
             <a href="#" class="dropdown-toggle" data-toggle="dropdown"><?=$this->transEsc("Theme")?> <b class="caret"></b></a>
             <ul class="dropdown-menu">
-              <? foreach ($this->layout()->themeOptions as $current): ?>
+              <?php foreach ($this->layout()->themeOptions as $current): ?>
                 <li<?=$current['selected'] ? ' class="active"' : ''?>><a href="#" onClick="document.themeForm.ui.value='<?=$this->escapeHtmlAttr($current['name'])?>';document.themeForm.submit()"><?=$this->transEsc($current['desc'])?></a></li>
-              <? endforeach; ?>
+              <?php endforeach; ?>
             </ul>
           </li>
-        <? endif; ?>
+        <?php endif; ?>
 
-        <? if (isset($this->layout()->allLangs) && count($this->layout()->allLangs) > 1): ?>
+        <?php if (isset($this->layout()->allLangs) && count($this->layout()->allLangs) > 1): ?>
           <!--<li class="language dropdown">
             <form method="post" name="langForm" id="langForm">
               <input type="hidden" name="mylang"/>
             </form>
             <a href="#" class="dropdown-toggle" data-toggle="dropdown"><?=$this->transEsc("Language")?> <b class="caret"></b></a>
             <ul class="dropdown-menu">
-              <? foreach ($this->layout()->allLangs as $langCode => $langName): ?>
+              <?php foreach ($this->layout()->allLangs as $langCode => $langName): ?>
                 <li<?=$this->layout()->userLang == $langCode ? ' class="active"' : ''?>><a href="#" onClick="document.langForm.mylang.value='<?=$langCode?>';document.langForm.submit()"><?=$this->displayLanguageOption($langName)?></a></li>
-              <? endforeach; ?>
+              <?php endforeach; ?>
             </ul>
           </li>-->
-        <? endif; ?>
+        <?php endif; ?>
       <li><a href="https://www.lib.uchicago.edu/research/help/catalog-help/" title="Help"><?=$this->transEsc("Help")?></a></li>
       </ul>
     </nav>
   </div>
-<? endif; ?>
+<?php endif; ?>
