--- a/themes/phoenix/templates/myresearch/fines.phtml
+++ b/themes/phoenix/templates/myresearch/fines.phtml
@@ -9,18 +9,18 @@
   <h2><?=$this->transEsc('Your Fines')?></h2>
   <?=$this->flashmessages()?>
 
-  <? $badLevel = 0; ?>
-  <? foreach ($this->fines as $fail): ?>
-    <? if ($fail['balance'] > 0): ?>
-       <? $badLevel += $fail['balance']; ?>
-       <? if ($badLevel / 100 >= 50): ?>
+  <?php $badLevel = 0; ?>
+  <?php foreach ($this->fines as $fail): ?>
+    <?php if ($fail['balance'] > 0): ?>
+       <?php $badLevel += $fail['balance']; ?>
+       <?php if ($badLevel / 100 >= 50): ?>
           <div class="alert alert-danger" role="alert">
             Your account has an outstanding balance of $50 or more. As a result, your borrowing and renewing privileges have been temporarily suspended.
           </div>
-          <? break; ?>
-       <? endif; ?>
-    <? endif; ?>
-  <? endforeach; ?>
+          <?php break; ?>
+       <?php endif; ?>
+    <?php endif; ?>
+  <?php endforeach; ?>
 
   <div class="alert alert-info" role="alert">
     See <a href="https://www.lib.uchicago.edu/borrow/borrowing/fines-and-lost-items/" target="_blank" class="external">Fines &amp; Lost Items</a> for payment options and other information. 
@@ -40,10 +40,10 @@
 
   <div class="toolbar">
     <form action="/vufind/Cart/Export" method="POST" style="display: inline;">
-      <? /* <input class="btn btn-default" name="export" value="Export as CSV" type="submit"> */ ?>
-      <? foreach ($this->fines as $record): ?>
+      <?php /* <input class="btn btn-default" name="export" value="Export as CSV" type="submit"> */ ?>
+      <?php foreach ($this->fines as $record): ?>
         <input type="hidden" name="ids[]" value="<?=$record['id']?>"/>
-      <? endforeach; ?>
+      <?php endforeach; ?>
     </form>
     <span class="dropdown">
       <a href="#" onclick="window.print();return false;"><button class="btn btn-default" type="button">Print</button></a>
@@ -61,9 +61,9 @@
 
   <?=$this->context($this)->renderInContext('librarycards/selectcard.phtml', ['user' => $this->auth()->isLoggedIn()]); ?>
 
-  <? if (empty($this->fines)): ?>
+  <?php if (empty($this->fines)): ?>
     <?=$this->transEsc('You do not have any fines')?>
-  <? else: ?>
+  <?php else: ?>
     <table class="table table-striped" summary="<?=$this->transEsc('Your Fines')?>">
     <thead>
     <tr>
@@ -76,15 +76,15 @@
       <th>Balance</th>
     </tr>
     </thead>
-    <? $totalDue = 0; ?>
-    <? foreach ($this->fines as $record): ?>
-      <? if ($record['balance'] > 0): ?>
+    <?php $totalDue = 0; ?>
+    <?php foreach ($this->fines as $record): ?>
+      <?php if ($record['balance'] > 0): ?>
       <tr>
         <td>
-          <? if (empty($record['title'])): ?>
+          <?php if (empty($record['title'])): ?>
             <?=$this->transEsc('not_applicable')?>
-          <? elseif (!isset($record['driver']) || !is_object($record['driver'])): ?>
-            <? 
+          <?php elseif (!isset($record['driver']) || !is_object($record['driver'])): ?>
+            <?php 
               $title = $this->escapeHtml(trim($record['title'], '/:'));
               if (isset($record['id'])) {
                 echo '<a href="/vufind/Record/' . $record['id'] . '">' . $title . '</a>';
@@ -92,9 +92,9 @@
                 echo $title;
               }
             ?>
-          <? else: ?>
+          <?php else: ?>
             <a href="<?=$this->recordLink()->getUrl($record['driver'])?>"><?=$this->escapeHtml(trim($record['title'], '/:'))?></a>
-          <? endif; ?>
+          <?php endif; ?>
           <?
             $locationName = $record['locationName'];
             if ($locationName) {
@@ -106,21 +106,21 @@
         <td><?=isset($record['returndate']) ? $this->escapeHtml($record['returndate']) : ''?></td>
         <td><?=isset($record['fine']) ?  $this->escapeHtml($record['billdate']) : ''?></td>
         <td><?=isset($record['fine']) ?  $this->escapeHtml($record['fine']) : ''?></td>
-        <td><?=isset($record['amount']) ? $this->safeMoneyFormat($record['amount']/100.00) : ''?></td>
-        <? if ($record['suspended']): ?>
+        <td><?=isset($record['amount']) ? $this->safeMoneyFormat($record['amount'] / 100.00) : ''?></td>
+        <?php if ($record['suspended']): ?>
           <td><?=isset($record['balance']) ? $this->escapeHtml('Suspended') : ''?></td>
-        <? else: ?>
+        <?php else: ?>
           <td><?=isset($record['balance']) ? $this->safeMoneyFormat($record['balance']/100.00) : ''?></td>
-        <? endif; ?>
+        <?php endif; ?>
       </tr>
-      <? endif; ?>
-      <? if (!$record['suspended']): ?>
-        <? $totalDue += $record['balance']; ?>
-      <? endif; ?>
-    <? endforeach; ?>
-      <tr style="font-weight:bold"><td colspan="6"><?=$this->transEsc('Total Balance Due: ')?></td><td><?=$this->safeMoneyFormat($totalDue/100.00) ?></td></tr>
+      <?php endif; ?>
+      <?php if (!$record['suspended']): ?>
+        <?php $totalDue += $record['balance']; ?>
+      <?php endif; ?>
+    <?php endforeach; ?>
+      <tr style="font-weight:bold"><td colspan="6"><?=$this->transEsc('Total Balance Due: ')?></td><td><?=$this->safeMoneyFormat($totalDue / 100.00) ?></td></tr>
     </table>
-  <? endif; ?>
+  <?php endif; ?>
 </div>
 
 <div class="<?=$this->layoutClass('sidebar')?>">
