--- a/themes/phoenix/templates/search/bulk-action-buttons.phtml
+++ b/themes/phoenix/templates/search/bulk-action-buttons.phtml
@@ -1,4 +1,4 @@
-<? if (isset($this->showCheckboxes) && $this->showCheckboxes): ?>
+<?php if (isset($this->showCheckboxes) && $this->showCheckboxes): ?>
   <div class="bulkActionButtons hidden-print">
     <div class="bulk-checkbox">
       <label>
@@ -8,19 +8,19 @@
       </label>
     </div>
     <div class="btn-group">
-      <? if (isset($this->showBulkOptions) && $this->showBulkOptions): ?>
-        <input id="ribbon-email" class="btn btn-link" data-lightbox type="submit" name="email" title="<?=$this->transEsc('bookbag_email_selected')?>" value="<?=$this->transEsc('Email')?>"<?if($this->formAttr):?> form="<?=$this->escapeHtmlAttr($this->formAttr) ?>"<? endif; ?>/>
-        <? $exportOptions = $this->export()->getBulkOptions(); if (count($exportOptions) > 0): ?>
-          <input id="ribbon-export" class="btn btn-link" data-lightbox type="submit" name="export" title="<?=$this->transEsc('bookbag_export_selected')?>" value="<?=$this->transEsc('Export')?>" <?if($this->formAttr):?> form="<?=$this->escapeHtmlAttr($this->formAttr) ?>"<? endif; ?>/>
-        <? endif; ?>
-        <input id="ribbon-print" class="btn btn-link" data-lightbox type="submit" name="print" title="<?=$this->transEsc('bookbag_print_selected')?>" value="<?=$this->transEsc('Print')?>" <?if($this->formAttr):?> form="<?=$this->escapeHtmlAttr($this->formAttr) ?>"<? endif; ?>/>
-        <? if ($this->userlist()->getMode() !== 'disabled'): ?>
-          <input id="ribbon-save" class="btn btn-link" data-lightbox type="submit" name="saveCart" title="<?=$this->transEsc('bookbag_save_selected')?>" value="<?=$this->transEsc('Save')?>" <?if($this->formAttr):?> form="<?=$this->escapeHtmlAttr($this->formAttr) ?>"<? endif; ?>/>
-        <? endif; ?>
-      <? endif; ?>
-      <? if (isset($this->showCartControls) && $this->showCartControls): ?>
+      <?php if (isset($this->showBulkOptions) && $this->showBulkOptions): ?>
+        <input id="ribbon-email" class="btn btn-link" data-lightbox type="submit" name="email" title="<?=$this->transEsc('bookbag_email_selected')?>" value="<?=$this->transEsc('Email')?>"<?if($this->formAttr):?> form="<?=$this->escapeHtmlAttr($this->formAttr) ?>"<?php endif; ?>/>
+        <?php $exportOptions = $this->export()->getBulkOptions(); if (count($exportOptions) > 0): ?>
+          <input id="ribbon-export" class="btn btn-link" data-lightbox type="submit" name="export" title="<?=$this->transEsc('bookbag_export_selected')?>" value="<?=$this->transEsc('Export')?>" <?if($this->formAttr):?> form="<?=$this->escapeHtmlAttr($this->formAttr) ?>"<?php endif; ?>/>
+        <?php endif; ?>
+        <input id="ribbon-print" class="btn btn-link" data-lightbox type="submit" name="print" title="<?=$this->transEsc('bookbag_print_selected')?>" value="<?=$this->transEsc('Print')?>" <?if($this->formAttr):?> form="<?=$this->escapeHtmlAttr($this->formAttr) ?>"<?php endif; ?>/>
+        <?php if ($this->userlist()->getMode() !== 'disabled'): ?>
+          <input id="ribbon-save" class="btn btn-link" data-lightbox type="submit" name="saveCart" title="<?=$this->transEsc('bookbag_save_selected')?>" value="<?=$this->transEsc('Save')?>" <?if($this->formAttr):?> form="<?=$this->escapeHtmlAttr($this->formAttr) ?>"<?php endif; ?>/>
+        <?php endif; ?>
+      <?php endif; ?>
+      <?php if (isset($this->showCartControls) && $this->showCartControls): ?>
         <input id="<?=$this->idPrefix?>updateCart" type="submit" class="btn btn-link" name="add" value="<?=$this->transEsc('Add to Book Bag')?>"/>
-      <? endif; ?>
+      <?php endif; ?>
     </div>
   </div>
-<? endif; ?>
+<?php endif; ?>
