--- a/themes/phoenix/templates/search/results.phtml
+++ b/themes/phoenix/templates/search/results.phtml
@@ -1,4 +1,4 @@
-<?
+<?php
   // Set up page title:
   $lookfor = $this->results->getUrlQuery()->isQuerySuppressed() ? '' : $this->params->getDisplayQuery();
   if (isset($this->overrideTitle)) {
@@ -63,73 +63,56 @@
 ?>
 <div class="row">
 <div class="<?=$this->layoutClass('mainbody')?>">
-  <? if (($recordTotal = $this->results->getResultTotal()) > 0): // only display these at very top if we have results ?>
-    <? foreach ($this->results->getRecommendations('top') as $current): ?>
+  <?php if (($recordTotal = $this->results->getResultTotal()) > 0): // only display these at very top if we have results ?>
+    <?php foreach ($this->results->getRecommendations('top') as $current): ?>
       <?=$this->recommend($current)?>
-    <? endforeach; ?>
-  <? endif; ?>
+    <?php endforeach; ?>
+  <?php endif; ?>
   <?=$this->flashmessages()?>
   <nav class="search-header hidden-print">
     <div class="search-stats">
-      <? if ($recordTotal > 0): ?>
-        <?=$this->transEsc("Showing")?>
-        <strong><?=$this->localizedNumber($this->results->getStartRecord())?></strong> - <strong><?=$this->localizedNumber($this->results->getEndRecord())?></strong>
-        <? if (!isset($this->skipTotalCount)): ?>
-            <? $this->layout()->srmessage = $this->transEsc('result_count', ['%%count%%' => $this->localizedNumber($recordTotal)]); ?>
-            <?=$this->transEsc('of')?> <strong><?=$this->localizedNumber($recordTotal)?></strong>
-          <? endif; ?>
-          <? if (isset($this->overrideSearchHeading)): ?>
-            <?=$this->overrideSearchHeading?>
-          <? elseif ($this->params->getSearchType() == 'basic'): ?>
-            <?=$this->transEsc('for search')?>: <strong>'<?=$this->escapeHtml($lookfor)?>'</strong>
-            <span class="hidden-xs hidden-sm hidden-md">
-            <?=$this->transEsc('in the')?>
-            <?=$this->SearchContext()->getDisplay()?>
-            </span>
-          <? endif; ?>
-          <? if ($qtime = $this->results->getQuerySpeed()): ?>
-            <!--<?=$this->transEsc('query time')?>: <?=$this->localizedNumber($qtime, 2).$this->transEsc('seconds_abbrev')?>-->
-          <? endif; ?>
-        <? else: ?>
+      <?php if ($recordTotal > 0): ?>
+        <?=$this->context()->renderInContext('search/controls/showing.phtml', ['lookfor' => $lookfor, 'recordTotal' => $recordTotal]) ?>
+        <?php else: ?>
           <h2><?=$this->transEsc('nohit_heading')?></h2>
-        <? endif; ?>
-        <? if (($recordTotal = $this->results->getResultTotal()) > 0): // only display this if we have results ?>
-            <? $this->ViewToggle(); ?>
+        <?php endif; ?>
+        <?php if (($recordTotal = $this->results->getResultTotal()) > 0): // only display this if we have results ?>
+            <?php $this->ViewToggle(); ?>
         <?endif;?>
       </div>
 
-    <? if ($recordTotal > 0): ?>
+    <?php if ($recordTotal > 0): ?>
       <div class="search-controls">
         <?=$this->render('search/controls/limit.phtml')?>
         <?=$this->render('search/controls/sort.phtml')?>
         <?=$this->render('search/controls/view.phtml')?>
       </div>
-    <? endif; ?>
+    <?php endif; ?>
   </nav>
-  <? /* End Listing Options */ ?>
+  <?php /* End Listing Options */ ?>
 
-  <? if ($recordTotal < 1): ?>
+  <?php if ($recordTotal < 1): ?>
     <p>
-      <? if (isset($this->overrideEmptyMessage)): ?>
+      <?php if (isset($this->overrideEmptyMessage)): ?>
         <?=$this->overrideEmptyMessage?>
-      <? else: ?>
-        <? $this->layout()->srmessage = $this->transEsc('nohit_prefix') . ' - ' . $this->escapeHtml($lookfor) . ' - ' . $this->transEsc('nohit_suffix'); ?>
+      <?php else: ?>
+        <?php $this->layout()->srmessage = $this->translate('nohit_lookfor_html', ['%%lookfor%%' => $this->escapeHtml($lookfor)]); ?>
         <?=$this->layout()->srmessage ?>
           <br/><br/><a class="btn btn-primary" href="http://forms2.lib.uchicago.edu/lib/worldcatlookup/?<?php echo $_SERVER['QUERY_STRING']; ?>">Repeat search in WorldCat</a><br/><br/>
-      <? endif; ?>
+      <?php endif; ?>
     </p>
-    <? if (isset($this->parseError)): ?>
+    <?php if (isset($this->parseError)): ?>
       <p class="alert alert-danger"><?=$this->transEsc('nohit_parse_error')?></p>
-    <? endif; ?>
-    <? foreach (($top = $this->results->getRecommendations('top')) as $current): ?>
+    <?php endif; ?>
+    <?php foreach (($top = $this->results->getRecommendations('top')) as $current): ?>
       <?=$this->recommend($current)?>
-    <? endforeach; ?>
-    <? foreach ($this->results->getRecommendations('noresults') as $current): ?>
-      <? if (!in_array($current, $top)): ?>
+    <?php endforeach; ?>
+    <?php foreach ($this->results->getRecommendations('noresults') as $current): ?>
+      <?php if (!in_array($current, $top)): ?>
         <?=$this->recommend($current)?>
-      <? endif; ?>
-    <? endforeach; ?>
-  <? else: ?>
+      <?php endif; ?>
+    <?php endforeach; ?>
+  <?php else: ?>
     <form id="search-cart-form" class="form-inline" method="post" name="bulkActionForm" action="<?=$this->url('cart-searchresultsbulk')?>" data-lightbox data-lightbox-onsubmit="bulkFormHandler">
       <?=$this->context($this)->renderInContext('search/bulk-action-buttons.phtml', ['idPrefix' => ''])?>
     <?=$this->render('search/list-' . $this->params->getView() . '.phtml')?>
@@ -144,26 +127,26 @@
         <a href="<?=$this->url('search-email')?>" class="mailSearch" data-lightbox id="mailSearch<?=$this->escapeHtmlAttr($this->results->getSearchId())?>">
           <i class="fa fa-envelope" aria-hidden="true"></i> <?=$this->transEsc('Email this Search')?>
         </a>
-        <? if ($this->accountCapabilities()->getSavedSearchSetting() === 'enabled'): ?>
+        <?php if ($this->accountCapabilities()->getSavedSearchSetting() === 'enabled'): ?>
           &mdash;
-          <? if (is_numeric($this->results->getSearchId())): ?>
-            <? if ($this->results->isSavedSearch()): ?>
+          <?php if (is_numeric($this->results->getSearchId())): ?>
+            <?php if ($this->results->isSavedSearch()): ?>
               <a href="<?=$this->url('myresearch-savesearch')?>?delete=<?=urlencode($this->results->getSearchId())?>"><i class="fa fa-remove" aria-hidden="true"></i> <?=$this->transEsc('save_search_remove')?></a>
-            <? else: ?>
+            <?php else: ?>
               <a href="<?=$this->url('myresearch-savesearch')?>?save=<?=urlencode($this->results->getSearchId())?>"><i class="fa fa-save" aria-hidden="true"></i> <?=$this->transEsc('save_search')?></a>
-            <? endif; ?>
-          <? endif; ?>
-        <? endif; ?>
+            <?php endif; ?>
+          <?php endif; ?>
+        <?php endif; ?>
       </div>
-    <? endif; ?>
+    <?php endif; ?>
   </div>
-<? /* End Main Listing */ ?>
+<?php /* End Main Listing */ ?>
 
-<? /* Narrow Search Options */ ?>
+<?php /* Narrow Search Options */ ?>
 <div class="<?=$this->layoutClass('sidebar')?>">
-  <? foreach ($this->results->getRecommendations('side') as $current): ?>
+  <?php foreach ($this->results->getRecommendations('side') as $current): ?>
     <?=$this->recommend($current)?>
-  <? endforeach; ?>
+  <?php endforeach; ?>
 </div>
-<? /* End Narrow Search Options */ ?>
+<?php /* End Narrow Search Options */ ?>
 </div>
